# chat-prompts

./: .eslintrc.js  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  README.md  eslint.config.mjs  noxfile.py  package-lock.json  package.json  personas.json  prompts.json  requirements-dev.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: lint-on-push-pr.yml  publish-to-npm-on-new-node.js-tag.yml  publish-to-pypi-on-new-python-tag.yml  sync-ai-personas.json-changes-to-repos.yml  sync-changes-to-gitlab.yml  sync-node.js-changes-to-js-utils.yml  sync-python-changes-to-python-utils.yml  sync-releases-to-js-or-python-utils.yml  sync-releases-to-python-utils.yml  update-root-downloads-shield-weekly.yml  validate-links-on-push-pr.yml
data/: ai-personas.json
docs/: README.md  SECURITY.md
node.js/: README.md  ai-personas.json  eslint.config.mjs  package-lock.json  package.json
node.js/assets/lib/: persona.js
node.js/docs/: README.md  SECURITY.md
node.js/docs/licenses/: LICENSE-CODE.md
node.js/src/: index.js
node.js/utils/: build.js  bump.sh  test-persona-lib.js
node.js/utils/lib/: file.js  log.js
python/: noxfile.py  pyproject.toml  requirements-dev.txt
python/docs/: README.md  SECURITY.md
python/docs/licenses/: LICENSE-CODE.md  LICENSE-DATA.md
python/src/ai_personas/: __init__.py  ai-personas.json
python/utils/: bump.py  clean.py
python/utils/data/: messages.json
python/utils/lib/: color.py  git.py  log.py  toml.py
python/utils/lib/data/: __init__.py
utils/: LICENSE.md  alphabetize-personas.py  json-minifier.js  remove-img-type-prompts.py  tag.py  update-personas-from-prompts-csv.py  update_root_downloads_shield.py
utils/lib/: color.py  log.py  prompt.py
utils/lib/data/: file.py  json.py
utils/personas/: alphabetize.py  tag_target_audience.py  update_from_hugging_face_csv.py
utils/personas/remove/: dupes.py  img-type-prompts.py
utils/remove/: dupe-personas.py  img-type-prompts.py
utils/update/: personas-from-prompts-csv.py
